update header style

--- a/pres/style/my_style.tex
+++ b/pres/style/my_style.tex
@@ -34,13 +34,10 @@
 \setbeamercolor{section in toc}{fg=black,bg=white}
 \setbeamercolor{alerted text}{use=structure,fg=structure.fg!50!black!80!black}
 \setbeamercolor{titlelike}{parent=palette primary,fg=structure.fg!50!black}
-\setbeamercolor{frametitle}{bg=gray!10!white,fg=davygrey}
+\setbeamercolor{frametitle}{bg=cobalt!70,fg=white}
 \setbeamercolor*{titlelike}{parent=palette primary}
 \setbeamertemplate{frametitle}[default][center]
 \setbeamerfont{frametitle}{series=\bfseries,parent=structure}
-
-
-
 
 
 % Remove section number from section title pages
