fixed a few typos

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -554,7 +554,7 @@
     "        \n",
     "    df[col] = LabelEncoder().fit_transform(df[col])  \n",
     "    \n",
-    "\n",
+    "# Define independent and dependent variables\n",
     "X = df.drop(columns = ['Churn'])\n",
     "y = df['Churn'].values\n",
     "\n",
