--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -782,7 +782,10 @@
     "- Tune the LogisticRegression fit parameters\n",
     "- Likewise, the threshold could be tuned in order to maximise precision and recall \n",
     "- k-fold cross validation would be better than the simple test/train split employed here\n",
-    "- Explore other classifiers (KNN, SVC, AdaBoost, XGBoost)"
+    "- Explore other classifiers (KNN, SVC, AdaBoost, XGBoost)\n",
+    "\n",
+    "### What else could we learn from the data?\n",
+    "- Could implement a customer lifetime value model"
    ]
   },
   {
